--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 30 16:30:00 MSK 2024
-sdk.dir=/home/klyushkin/Android/Sdk
+#Mon Apr 08 18:37:51 GMT+03:00 2024
+sdk.dir=C\:\\Users\\nikit\\AppData\\Local\\Android\\Sdk
