Add classes: RegisterScreenEvent, RegisterScreenViewModel. Update UI of RegisterScreen

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Apr 08 18:37:51 GMT+03:00 2024
-sdk.dir=C\:\\Users\\nikit\\AppData\\Local\\Android\\Sdk
+sdk.dir=/home/klyushkin/Android/Sdk
