--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31"
+        android:networkSecurityConfig="@xml/network_security_config"
         >
         <activity
             android:screenOrientation="portrait"
